[package]
name = "nsrl_updater"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }
memmap2 = "0.5"
crossbeam = "0.8"
indicatif = "0.17"
rayon = "1.7"
num_cpus = "1.15"
libc = "0.2"
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
